--- a/manifest.json
+++ b/manifest.json
@@ -3,8 +3,8 @@
     "description" : "Base Level Extension",
     "version": "1.0",
     "manifest_version": 2,
-    "browser_action": {
-      "default_popup": "hello.html",
+    "page_action": {
+      "default_popup": "popups/hello.html",
       "default_icon": "hello_extensions.png"
     },
     "permissions": [
