--- a/manifest.json
+++ b/manifest.json
@@ -9,7 +9,8 @@
     },
     "permissions": [
         "http://www.google.com/",
-        "tabs"
+        "tabs",
+        "identity"
     ],
     "commands": {
       "_execute_browser_action": {
@@ -20,9 +21,8 @@
         "description": "Opens hello.html"
       }
     },
-    "background":
-    {
-        "scripts": ["background.js"]
+    "background": {
+        "page": "background.html"
     },
     "content_scripts": [
         {
@@ -35,5 +35,13 @@
             "css": ["mystyles.css"],
             "js": ["jquery-3.3.1.min.js", "player.js"]
           }
-      ]
+      ],
+      "content_security_policy":"script-src 'self' https://www.gstatic.com/ https://*.firebaseio.com https://www.googleapis.com; object-src 'self'",
+      "oauth2": {
+        "client_id": "<YOUR_CLIENT_ID>",
+        "scopes": [
+          "https://www.googleapis.com/auth/userinfo.email",
+          "https://www.googleapis.com/auth/userinfo.profile"
+        ]
+      }
   }
