--- a/manifest.json
+++ b/manifest.json
@@ -34,7 +34,7 @@
         },
         {
             "matches": ["https://www.ceskatelevize.cz/ivysilani/embed/iFramePlayer.php*"],
-            "css": ["mystyles.css"],
+            "css": ["src/css/ceskatelevize.css"],
             "js": ["jquery-3.3.1.min.js", "src/js/generic.js", "src/js/ceskatelevize.js"]
           },
           {
